welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: Missing closing brace `}' assumed here
def jardinierer(){
^FlowerCase:1: error: expected class or object definition
def jardinierer(){
^